--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="C_D97D54_orange">#D97D54</color>
+    <color name="C_C4714B_orange">#C4714B</color>
+    <color name="White">#FFFFFF</color>
+    <color name="C_334856_blue">#334856</color>
 </resources>
